--- a/package.json
+++ b/package.json
@@ -17,37 +17,37 @@
     "firebase:login": "firebase login"
   },
   "dependencies": {
+    "@types/uuid": "^9.0.7",
+    "date-fns": "^2.30.0",
+    "firebase": "^10.7.1",
+    "lucide-react": "^0.294.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.20.1",
-    "firebase": "^10.7.1",
     "react-firebase-hooks": "^5.1.1",
-    "react-player": "^2.13.0",
     "react-hot-toast": "^2.4.1",
-    "lucide-react": "^0.294.0",
-    "date-fns": "^2.30.0",
-    "uuid": "^9.0.1",
-    "@types/uuid": "^9.0.7"
+    "react-player": "^2.13.0",
+    "react-router-dom": "^6.20.1",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@playwright/test": "^1.40.1",
+    "@testing-library/jest-dom": "^6.1.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.5.1",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
-    "@typescript-eslint/eslint-plugin": "^6.14.0",
-    "@typescript-eslint/parser": "^6.14.0",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.16",
     "eslint": "^8.55.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "jsdom": "^23.0.1",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.3.6",
     "typescript": "^5.2.2",
     "vite": "^5.0.8",
-    "vitest": "^1.0.4",
-    "@playwright/test": "^1.40.1",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/jest-dom": "^6.1.5",
-    "@testing-library/user-event": "^14.5.1",
-    "jsdom": "^23.0.1"
+    "vitest": "^1.0.4"
   }
 }
