final full setup

--- a/.env.example
+++ b/.env.example
@@ -5,5 +5,9 @@ VITE_FIREBASE_PROJECT_ID=vidstream-98e50
 VITE_FIREBASE_STORAGE_BUCKET=vidstream-98e50.firebasestorage.app
 VITE_FIREBASE_MESSAGING_SENDER_ID=910715837016
 VITE_FIREBASE_APP_ID=1:910715837016:web:478f07f8fe638d2655c82d
+VITE_FIREBASE_MEASUREMENT_ID=G-2J03W47ZKB
 
-# measurementId: "G-2J03W47ZKB"
+# Cloudinary Configuration (Free) - Replace with your actual credentials
+VITE_CLOUDINARY_CLOUD_NAME=your_cloud_name_here
+VITE_CLOUDINARY_API_KEY=your_api_key_here
+VITE_CLOUDINARY_UPLOAD_PRESET=streamrush_uploads
